--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     padding: 4px;
     align-items: center;
 }
@@ -24,6 +24,7 @@ header {
     display: inline-block;
     padding: 10px;
     margin-right: auto;
+    padding-left: 5px; 
 }
 
 header h1 {
@@ -35,7 +36,7 @@ a {
  transition: all 0.3secs ease;
  text-decoration: none;
  font-family: 'open sans' sans-serif;
- font-size: 16px;
+ font-size: 20px;
  font-weight:900;
  align-content: flex-start;
  }
@@ -179,3 +180,14 @@ button {
         margin-left: -10px;
         position: relative;
     }
+
+    .fox{
+        padding-right: 10px;
+        margin-right: 10px;
+    }
+
+    a:nth-child(3) {
+        margin-left: 20px;
+    }
+
+    
