--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow: auto;
 }
 
 header {
@@ -15,6 +16,8 @@ header {
     padding: 4px;
     align-items: center;
     background-color: #c5b2ff;
+    border-radius: 25px;
+    box-shadow: 0 0 10px 3px #b0b2b9;
 }
 
 .box { 
@@ -61,13 +64,15 @@ button {
     background-color: #ffffff;
     width: 85%;
     overflow: hidden;
-    border-radius: 80px;
-    margin: 0 auto;
+    border-radius: 50px;
+    margin: 20px;
     display: flex;
     flex: 1 1 100%;  
     align-items: cover;
     justify-content: space-between;
-    box-shadow: 0 0 20px 6px #6f090cf4;
+    box-shadow: 0 0 10px 3px #6f090cf4;
+    border: 5px;
+    margin-left: 100px;
 }
 
 .boxform div{
@@ -191,31 +196,38 @@ button {
         margin-left: 20px;
     } 
 
-    .tall {
-        display: flex;
-        background-color: #c5b2ff;
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 4px;
+    align-items: center;
+    background-color: #c5b2ff;
+    border-radius: 25px;
+    box-shadow: 0 0 10px 3px #b0b2b9;
+    font-size: 15px;
+    font-weight: 900;
+align-content: space-around;
+}
 
+.small {
+    display: inline;
+    padding: 2px;
+    justify-content: right;
+    margin: 20px;
+}
+
+.short a {
+    display: inline;
+    padding: 3px;
     }
 
-    .short{}
+    .long li , a {
+display: inline;
+padding: 5px;
+margin: 5px;
+padding-left: auto;
 
-    .long li {
-        display: inline-block;
-        margin-right: auto;
     }
-
-    .long .small {
-        font-size: 10px;
-        font-weight: 900;
-    }
-
-    .long li {
-        display: inline-block;
-        margin-right: auto;
-        padding: 10px;
-        padding-left: 510px;
-    }
-
     
 
     
