--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ button {
     width: 85%;
     overflow: hidden;
     border-radius: 50px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     flex: 1 1 100%;  
     align-items: cover;
     justify-content: space-between;
-    box-shadow: 0 0 10px 3px #6f090cf4;
-    border: 5px;
+    box-shadow: 0 0 20px 6px gray;
+    border: 10px;
     margin-left: 100px;
 }
 
@@ -111,7 +111,7 @@ button {
     }
    
     .boxform .left .overlay span a {
-        background: #983b3b;
+        background: palevioletred;
         color: black;
         margin-top: 10px;
         padding: 14px 50px;
